Quorum/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectTextField.quorum
class Main
    text v = "text"
    action Main
        Test(v)
    end

    action Test(Object var)
        text v = cast(text, var)
        if v = "text"
            output "passed"
        end
    end
end
