Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignObjectText.quorum
class Main
    action Main
        Object v = Test()
    end

    action Test() returns Object
        text var = "text"
        return var
    end
end